--- a/KHood_controller.ioc
+++ b/KHood_controller.ioc
@@ -1,4 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_8
+ADC1.CommonPathInternal=null|null|null|null
+ADC1.IPParameters=NbrOfConversionFlag,Channel-0\#ChannelRegularConversion,master,CommonPathInternal
+ADC1.NbrOfConversionFlag=1
+ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -6,31 +11,34 @@ File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Speed_Mode=I2C_Fast
 I2C1.IPParameters=Timing,I2C_Speed_Mode
-I2C1.Timing=0x00702681
+I2C1.Timing=0x00300F38
 KeepUserPlacement=false
 Mcu.CPN=STM32L432KCU3
 Mcu.Family=STM32L4
-Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP0=ADC1
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32L432K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
 Mcu.Pin1=PC15-OSC32_OUT (PC15)
-Mcu.Pin10=PB7
-Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin10=PB4 (NJTRST)
+Mcu.Pin11=PB6
+Mcu.Pin12=PB7
+Mcu.Pin13=VP_SYS_VS_Systick
 Mcu.Pin2=PA0
 Mcu.Pin3=PA2
-Mcu.Pin4=PA13 (JTMS-SWDIO)
-Mcu.Pin5=PA14 (JTCK-SWCLK)
-Mcu.Pin6=PA15 (JTDI)
-Mcu.Pin7=PB3 (JTDO-TRACESWO)
-Mcu.Pin8=PB4 (NJTRST)
-Mcu.Pin9=PB6
-Mcu.PinsNb=12
+Mcu.Pin4=PA3
+Mcu.Pin5=PA10
+Mcu.Pin6=PA13 (JTMS-SWDIO)
+Mcu.Pin7=PA14 (JTCK-SWCLK)
+Mcu.Pin8=PA15 (JTDI)
+Mcu.Pin9=PB3 (JTDO-TRACESWO)
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L432KCUx
@@ -52,6 +60,8 @@ PA0.GPIO_Label=MCO [High speed clock in]
 PA0.Locked=true
 PA0.Mode=HSE-External-Clock-Source-for-LittleOrca
 PA0.Signal=RCC_CK_IN
+PA10.Locked=true
+PA10.Signal=GPIO_Output
 PA13\ (JTMS-SWDIO).GPIOParameters=GPIO_Label
 PA13\ (JTMS-SWDIO).GPIO_Label=SWDIO
 PA13\ (JTMS-SWDIO).Locked=true
@@ -72,6 +82,11 @@ PA2.GPIO_Label=VCP_TX
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
+PA3.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PA3.GPIO_Mode=GPIO_MODE_ANALOG_ADC_CONTROL
+PA3.GPIO_PuPd=GPIO_NOPULL
+PA3.Locked=true
+PA3.Signal=ADCx_IN8
 PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
 PB3\ (JTDO-TRACESWO).GPIO_Label=button_input
 PB3\ (JTDO-TRACESWO).Locked=true
@@ -121,9 +136,9 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.48CLKFreq_Value=24000000
-RCC.ADCFreq_Value=16000000
+RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
 RCC.APB1TimFreq_Value=32000000
@@ -140,7 +155,7 @@ RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=32000000
 RCC.I2C2Freq_Value=16000000
 RCC.I2C3Freq_Value=32000000
-RCC.IPParameters=48CLKFreq_Value,ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIMFreq_Value,LPUART1Freq_Value,LPUARTFreq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,WatchDogFreq_Value
+RCC.IPParameters=48CLKFreq_Value,ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIMFreq_Value,LPUART1Freq_Value,LPUARTFreq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,WatchDogFreq_Value
 RCC.LCDFreq_Value=37000
 RCC.LPTIM1Freq_Value=32000000
 RCC.LPTIM2Freq_Value=32000000
@@ -158,14 +173,15 @@ RCC.PLLN=16
 RCC.PLLPoutputFreq_Value=9142857.142857144
 RCC.PLLQoutputFreq_Value=32000000
 RCC.PLLRCLKFreq_Value=32000000
-RCC.PLLSAI1PoutputFreq_Value=4571428.571428572
-RCC.PLLSAI1QoutputFreq_Value=16000000
-RCC.PLLSAI1RoutputFreq_Value=16000000
+RCC.PLLSAI1N=16
+RCC.PLLSAI1PoutputFreq_Value=9142857.142857144
+RCC.PLLSAI1QoutputFreq_Value=32000000
+RCC.PLLSAI1RoutputFreq_Value=32000000
 RCC.PWRFreq_Value=32000000
-RCC.RNGFreq_Value=16000000
+RCC.RNGFreq_Value=32000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SAI1Freq_Value=4571428.571428572
+RCC.SAI1Freq_Value=9142857.142857144
 RCC.SWPMI1Freq_Value=32000000
 RCC.SYSCLKFreq_VALUE=32000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
@@ -174,11 +190,13 @@ RCC.TimerFreq_Value=32000000
 RCC.USART1Freq_Value=32000000
 RCC.USART2Freq_Value=32000000
 RCC.USART3Freq_Value=16000000
-RCC.USBFreq_Value=16000000
+RCC.USBFreq_Value=32000000
 RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=64000000
-RCC.VCOSAI1OutputFreq_Value=32000000
+RCC.VCOSAI1OutputFreq_Value=64000000
 RCC.WatchDogFreq_Value=32000
+SH.ADCx_IN8.0=ADC1_IN8,IN8-Single-Ended
+SH.ADCx_IN8.ConfNb=1
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
